# image_preprocessing

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  compile_commands.json  config.json
.cache/clangd/index/: abi_macros.hpp.47DE71004ADAB60F.idx  adl_serializer.hpp.6D4D5977C07A0F6E.idx  begin.hpp.462D6445A6794B01.idx  binary_reader.hpp.85E3969401B9F4D4.idx  binary_writer.hpp.04D2A29D7324C2EA.idx  byte_container_with_subtype.hpp.2EC2DBC25C8DFC96.idx  cpp_future.hpp.9953B2DD410902F6.idx  detected.hpp.FCCE5EF702D92086.idx  end.hpp.DB6B88D92A4A07D8.idx  exceptions.hpp.00EE7E9575BBEA92.idx  filter.cpp.A091CF3F80FE37E8.idx  filter.hpp.9D5EEBEB2C1BD42C.idx  from_json.hpp.DD2C68FB393C991E.idx  gmock-actions.h.720FD001D2B8BB16.idx  gmock-all.cc.EA473D95536FEEE1.idx  gmock-cardinalities.cc.9F2DB500C3D3F63B.idx  gmock-cardinalities.h.F7B45BC71F5A619D.idx  gmock-function-mocker.h.CE5DEDE98006CA06.idx  gmock-generated-actions.h.7F712101BBD3A6B5.idx  gmock-internal-utils.cc.576EA551AE33181C.idx  gmock-internal-utils.h.AFFDC4F06146591E.idx  gmock-matchers.cc.8770ECA9D364B491.idx  gmock-matchers.h.03BA30EDB23FD391.idx  gmock-matchers.h.5E1E994044B73018.idx  gmock-more-actions.h.024B5FA239654058.idx  gmock-more-matchers.h.C4C27C62D2D4D7DE.idx  gmock-nice-strict.h.8D01FDFB26DC368B.idx  gmock-port.h.176486F688A82278.idx  gmock-port.h.D1A033BFB480F7D0.idx  gmock-pp.h.478C4F082B4CD3B1.idx  gmock-spec-builders.cc.DB9A409637EABDE8.idx  gmock-spec-builders.h.02DAB982318ABF2C.idx  gmock.cc.8B96F70BC81FD3A0.idx  gmock.h.12ECD43E1E8DC9BF.idx  gmock_main.cc.F0E621D2C3C254CD.idx  gtest-all.cc.B944A54918CA6C2B.idx  gtest-assertion-result.cc.6CC55E5208A9330F.idx  gtest-assertion-result.h.6542F9054091B628.idx  gtest-death-test-internal.h.56042923E8A78994.idx  gtest-death-test.cc.F9562DB8627938F7.idx  (+78 more)
cmake/: CompileOptions.cmake
src/: CMakeLists.txt
src/ImgPP/: CMakeLists.txt  imgpp.cpp
src/ImgPP-MPI/: CMakeLists.txt  imgpp.cpp
src/ImgPP-MPI1D/: CMakeLists.txt  imgpp.cpp
src/ImgPP-MPI2D/: CMakeLists.txt  imgpp.cpp
src/ImgPP-OpenMP/: CMakeLists.txt  imgpp.cpp
src/ImgPP-Seq/: CMakeLists.txt  imgpp.cpp
src/configuration/: CMakeLists.txt
src/configuration/filter/: CMakeLists.txt  filter.hpp
src/configuration/parser/: CMakeLists.txt  parser.cpp  parser.hpp
src/pp/: CMakeLists.txt
src/pp/mat/: CMakeLists.txt  mat.cpp  mat.hpp
src/pp/pixel/: CMakeLists.txt  pixel.cpp  pixel.hpp
src/pp/transformation/: CMakeLists.txt  transformation.cpp  transformation.hpp
src/utils/OpenMP/: utils.cpp
